Mock ApplicationDirectory to use temporary files during testing
Add missing module for the appdirs dependency to the module-info.